---------------------------------------------------------------------------------------------------
Version: 0.69.79
Date: ????
  Changes:
    - Fixed lore typo
    - Added 4 new lore entries. Including some hazards.
---------------------------------------------------------------------------------------------------
Version: 0.69.78
Date: 2025-07-06
  Changes:
    - Fixed crash that happened when super force building rails on Rubia.
    - Planned to come soon: Biter egg productivity research added to biofusion science.
    - Planned to come soon: Biolab pollution reduction research.
---------------------------------------------------------------------------------------------------
Version: 0.69.77
Date: 2025-07-06
  Changes:
    - Made Krastorio 2 SO compatibility code more stable for other mods being included.
    - Improved contrast of mod thumbnail.
---------------------------------------------------------------------------------------------------
Version: 0.69.76
Date: 2025-07-05
  Changes:
    - Version up of machine upgrades, to force in the bug fixes.
    - Fixed old Rubia icon in Operation Iron Man.
    - New Rubia sprites. Thanks, nullevoy.
    - If K2SO is installed, then buff projectiles to make up for the issues in slower projectiles.
    - Now issues warnings for gun mods that make Rubia much more difficult.
    - Buffed main theme song rate +50%.
    - Wind turbine color on map now blackish.
    - Nutrient productivity tech cost 1.5^L => 1.8^L, making it cost +20% per rank.
    - Biochamber prod bonus cost (2^L => 3^L) * 1000. Now max rank costs 243k instead of 32k
---------------------------------------------------------------------------------------------------
Version: 0.69.75
Date: 2025-07-03
  Changes:
    - Added wind checks to super force building. Thanks to lesbian_mami for her cyubersyn code, and lord thy god for guiding me through her BP library!