@@ -1,0 +1,2 @@
+
+if storage.rubia_surface then storage.rubia_surface.peaceful_mode = false end
